# quik-rs

./: Cargo.toml  README.md
src/: app.rs  bot.rs  config.rs  connector.rs  ema.rs  main.rs  psql.rs  quik.rs  signal.rs  tg.rs  trade.rs  trader.rs
