[package]
name = "quik-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
libloading = "0.8.5"
libc = "0.2.159"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = { version = "1.40.0", features = ["full"] }
tokio-postgres = { version = "0.7.12", features = ["with-chrono-0_4"] }
bb8 = "0.8.6"
bb8-postgres = "0.8.1"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.36", features = ["db-tokio-postgres"] }
rust_decimal_macros = "1.36"
ta = "0.5.0"